Research page updated.

--- a/publications.html
+++ b/publications.html
@@ -261,10 +261,9 @@ mobile Ad-hoc networks", Eighth International Conference on Digital Information 
             
 <div class="publications">
   <ol reversed>  
-    <li>
-      <span class="title"> Machine Learning in Mobile Computing - Recent Trends, Opportunities and Challenges
-in The 2nd International Conference on Machine Learning and Intelligent Systems (MLIS2020) October 25-28, 2020. </span>
-    </li>
+    <li> <span class="title"> Machine Learning in Mobile Computing - Recent Trends, Opportunities and Challenges
+in The 2nd International Conference on Machine Learning and Intelligent Systems (MLIS2020) October 25-28, 2020. </span> </li>
+    <li> <span class="title"> Network Slicing in 5G at College of Engineering, Qatar University, DOha, Qatar, April 11, 2023. </span> </li>
 </ol>
 </div>
         
