PDF links added to publications

--- a/blog.html
+++ b/blog.html
@@ -41,7 +41,7 @@
     <img src="img/khan.jpg" alt="Profile Picture">
   </div>
   <div class="description">
-    <h1> Muhammad Asif Khan </h1>
+    <p class="title"> Muhammad Asif Khan </p>
     <p class="subtitle"> Post-doctoral Researcher </p>
     <p class="subtitle"> Qatar Mobility Innovations Center (QMIC), Doha, Qatar.</p>  
     <ul id="profile">
@@ -52,7 +52,7 @@
     <p style="margin-top: 12px">  <a href="img/cv.pdf"> Curriculum Vitae </a> </p>
   </div>
   <div class="interest">
-    <h2> Research Interests: </h2>
+<p class="subtitle"> Research Interests: </p>
     <ul>
       <li>Mobile computing</li>
       <li>Edge Intelligence</li>
