--- a/blog.html
+++ b/blog.html
@@ -150,6 +150,8 @@
 </main>
 
   <footer>
+    <p> Contact me:  asifk AT ieee DOT org</p>
+    <br>
     <p>&copy; 2023 Muhammad Asif Khan </p>
   </footer>
 </body>
