--- a/services.html
+++ b/services.html
@@ -147,6 +147,8 @@
 </main>
 
   <footer>
+    <p> Contact me:  asifk AT ieee DOT org</p>
+    <br>
     <p>&copy; 2023 Muhammad Asif Khan </p>
   </footer>
 </body>
