--- a/publications.html
+++ b/publications.html
@@ -47,7 +47,7 @@
       <li><a href="https://www.researchgate.net/profile/Muhammad-Asif-Khan-3">ResearchGate</a></li>
       <li><a href="https://www.linkedin.com/in/muasifk/">LinkedIn</a></li>
     </ul> 
-    <p style="margin-top: 12px">  Download <a href="img/cv.pdf"> CV </a> </p>
+    <p id="cv">  Download <a href="img/cv.pdf"> CV </a> </p>
   </div>
   <div class="interest">
     <p class="subtitle"> Research Interests: </p>
