--- a/index.html
+++ b/index.html
@@ -161,7 +161,9 @@
 
     
   <footer>
-    <p> Contact me:  asifk AT ieee DOT org</p>
+<!--    <div class="email">-->
+        <p> Contact me:  asifk AT ieee DOT org </p>
+<!--      </div>-->
     <br>
     <p>&copy; 2023 Muhammad Asif Khan </p>
   </footer>
