--- a/research.html
+++ b/research.html
@@ -85,14 +85,14 @@
     <div class="research-image"> <img src="img/drone_det.jfif" alt="Research Image"> </div>
     <div class="research-content">
     <p class="research-description">
-    Drones can be a threat critical assets, infrastructure, ane privacy of people. A drone detection system shall be efficient, accurate, robust, cost-effective, and scalable. Read our comprehensive review article in IEEE Sensors journal.
+    Drones can be a threat critical assets, infrastructure, ane privacy of people. A drone detection system shall be efficient, accurate, robust, cost-effective, and scalable. Read our comprehensive <a href="https://ieeexplore.ieee.org/document/9765451"> review article </a> in IEEE Sensors journal.
     </p> </div></div>
     
     <div class="research-item">
     <div class="research-image"> <img src="img/drone_det3.jpg" alt="Research Image"> </div>
     <div class="research-content">
     <p class="research-description">
-    We conducted <a href="https://arxiv.org/pdf/2212.01436">experiment analysis</a> on drone detection methods (i.e., acoustic detection, radio frequency (RF) detection, and visual detection) and our novel encryption-based scheme to detect unauthorized drones in the air.
+        We conducted <a href="https://arxiv.org/pdf/2212.01436">experiment analysis</a> on drone detection methods (i.e., acoustic detection, radio frequency (RF) detection, and visual detection) and our novel encryption-based scheme to detect unauthorized drones in the air. For acoustic detection, we used a <span class="important"> ReSpeaker</span> 4-mic array and <span class="important"> RaspberryPi </span> processor with <span class="important">Open EmbeddeD Audition System (ODAS)</span> GUI. For RF detection, we used <span class="important"> E312 USRP (by Ettusresearch™) with a 2x2 MIMO transceiver</span>. For visual detection, we used a PTZ camera <span class="important"> WizSense series (model# SD6CE445XA-HNR) </span>, and <span class="important">Jetson Xavier</span> device.
     </p>
     </div>
     <!--    Please visit the project site <a href="" target="_blank"> DroneCMS </a>for more details.-->
