--- a/research.html
+++ b/research.html
@@ -151,7 +151,7 @@
     <div class="research-image"> <img src="img/d2d_1.jpg" alt="Research Image"> </div>
     <div class="research-content">
     <p class="research-description">
-    Wi-Fi Direct, a technology by Wi-Fi Alliance allows Wi-Fi devices to connect to each other without access point (AP). We proposed a vital improvement to the specification that enables optimal dense network for content distribution. Read our work in <a href="https://ieeexplore.ieee.org/abstract/document/8892459">enhanced group formation</a> in Wi-Fi Direct.
+    Wi-Fi Direct, a technology by Wi-Fi Alliance allows Wi-Fi devices to connect to each other without access point (AP). We proposed a vital improvement to the specification that enables optimal dense network for content distribution. Read our work on <a href="https://ieeexplore.ieee.org/abstract/document/8892459">Enhanced Group Formation</a> in Wi-Fi Direct.
     </p> </div></div>
         
     <div class="research-item">
