News section updated..

--- a/blog.html
+++ b/blog.html
@@ -152,7 +152,7 @@
     </a>
     <p>Wi-Fi Direct for direct connectivity between Wi-Fi devices</p>
   </div>
-</div>    
+<!--</div>    -->
 </section>
       
 <!-- ********************** END OF THE PAGE ************************* -->    
