--- a/services.html
+++ b/services.html
@@ -38,9 +38,7 @@
 <!-- *************************************************************
      Section:  Services
 ************************************************************* -->
-    <section id="services">
-   
-<!--    <h1>Professional Services</h1>-->
+<section class="services">
 <p> Note:- Visit my verified reviewer profile on <a href="https://www.webofscience.com/wos/author/record/ITT-1012-2023" target="_blank">Web of Science </a>. </p> 
 
 <br> <hr>
