--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Merriweather:wght@400;400i&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css">
   <link rel="stylesheet" href="style-common.css">
   <link rel="stylesheet" href="style-index.css">  
 </head>
@@ -181,6 +181,7 @@
      Footer
 ************************************************************* --> 
   <!-- Footer Section -->
+ <!-- Footer Section -->
     <footer>
         <div class="footer-content">
             <!-- Copyright Notice -->
