--- a/publications.html
+++ b/publications.html
@@ -145,7 +145,7 @@
     </li>
       
     <li>
-        I. Mrad, E. Baccour, R. Hamila, M. A. Khan, A. Erbad, M. Hamdi, <a href="">"RL-CEALS: Reinforcement Learning for Collaborative Edge Assisted Live Streaming"</a>, in 28th IEEE Symposium Computers and Communications (ISCC) 9 -12 July, Tunis Tunisia.
+        I. Mrad, E. Baccour, R. Hamila, M. A. Khan, A. Erbad, M. Hamdi, <a href="https://ieeexplore.ieee.org/abstract/document/10218244">"RL-CEALS: Reinforcement Learning for Collaborative Edge Assisted Live Streaming"</a>, in 28th IEEE Symposium Computers and Communications (ISCC) 9 -12 July, Tunis Tunisia.
     </li>  
       
     <li>
