papers added and profile pic updated.

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 
  <section id="about">
   <div class="image-container">
-    <img src="img/khan.jpg" alt="Profile Picture">
+    <img src="img/khan4.jpg" alt="Profile Picture">
   </div>
   <div class="description">
     <p class="title"> Muhammad Asif Khan </p>
