minor updates and formatting

--- a/blog.html
+++ b/blog.html
@@ -166,10 +166,10 @@
             <p>&copy; 2023 Muhammad Asif Khan</p>
 
             <!-- Contact Email with Typing Effect -->
-            <p>Email: <span class="email">asifk AT ieee DOT org</span></p>
+<!--            <p>Email: <span class="email">asifk AT ieee DOT org</span></p>-->
 
             <!-- Social Media Icons -->
-            Follow me:
+<!--            Follow me:-->
             <ul class="social-icons">
                 <li><a href="https://twitter.com/muasifk" target="_blank"><i class="fab fa-twitter"></i></a></li>
                 <li><a href="https://www.linkedin.com/in/muasifk/" target="_blank"><i class="fab fa-linkedin"></i></a></li>
