--- a/services.html
+++ b/services.html
@@ -72,20 +72,27 @@
   <ul>  
       <li> Nature Scientific Reports </li>
       <li> IEEE Transactions on Artificial Intelligence (TAI)</li>
+      <li> IEEE Transactions on Neural Networks and Learning Systems (TNNLS) </li>
       <li> IEEE Transactions on Emerging Topics in Computing (TETC) </li>
       <li> IEEE Transactions on Systems, Man, and Cybernetics (SMC) </li>
       <li> IEEE Transactions on Consumer Electronics (TCE) </li>
       <li> IEEE Transactions on Circuits and Systems for Video Technology (TCSVT) </li>
+      <li> IEEE Transactions on Microwave Theory and Techniques (TMTT)</li>
+      <li> IEEE Transactions on Dependable and Secure Computing (TDSC)</li>
       <li> IEEE Communications Surveys and Tutorials (COMST) </li>
-      <li> IEEE Communication Magazine (COMMAG)</li>
+      <li> IEEE Communications Magazine (COMMAG)</li>
       <li> IEEE Wireless Communication Magazine (WCM) </li>
+      <li> IEEE Wireless Communications Letters (WCL)   </li>
       <li> IEEE Communication Standards Magazine (COMSTD) </li>
       <li> IEEE Internet of Things Journal (IOT)</li>
       <li> IEEE Internet of Things Magazine (IOTMAG) </li>
+      <li> IEEE Networking Letters (NL)</li>
       <li> IEEE Systems Journal (ISJ) </li>
+      <li> IEEE Sensors Journal (Sens. J.)</li>
       <li> IEEE Sensors Letters (SENSL)</li>
       <li> IEEE Access </li>
       <li> IEEE Open Journal of the Communication Society (OJ_COMS)</li>
+      <li> IEEE Open Journal of Vehicular Technology (OJ_VT)</li>
       <li> IEEE China Communications </li>
       <li> IET Communications </li>
       <li> IET Intelligent Transportation System </li>
@@ -93,7 +100,11 @@
       <li> Wireless Personal Communication, Springer (WPC) </li>
       <li> Elsevier Future Generation Computer Systems (FGCC)</li>
       <li> Elsevier ICT Express (ICTE)</li>
+      <li> Applied Artificial Intelligence </li>
+      <li> The Imaging Science Journal </li>
       <li> Elsevier Computers and Electrical Engineering (COMPELECENG)</li>
+      <li> Emerald International Journal of Pervasive Computing and Communications </li>
+      <li> IGI International Journal of Wireless Networks and Broadband Technologies </li>
 
   </ul>
 </div>
@@ -112,12 +123,16 @@
       <li> IEEE International Conference on Acoustics, Speech & Signal Processing (ICASSP 2020)</li>
       <li> IEEE Sensors 2020 </li>
       <li> IEEE Conference on Technologies for Sustainability (SusTech 2020-2024)</li>
+      <li> IEEE International Wireless Communications and Mobile Computing Conference (IWCMC 2023)</li>
+      <li> ACM 9th International Conference on Multimedia Systems and Signal Processing (ICMSSP 2024) </li>
       <li> International Conference on Machine Learning and Intelligent Systems (MLIS 2020-24)</li>
       <li> International Workshop on Signal Processing and Machine Learning (WSPML 2020-24)</li>
       <li> IEEE 4th World Forum on Internet of Things (WF-IoT 2018)</li>
+      <li> IEEE International Conference on Innovations in Information Technology (IIT) </li>
       <li> SIPM 2021: 9th International Conference on Signal Image Processing and Multimedia, Toronto, Canada </li>
       <li> TCB6GN: 1st International Workshop on Traffic Congestion in Beyond 5G/6G Networks </li>
       <li> International Conference on Computing Science, Communication and Security (COMS2) </li>
+      <li> International Conference on Innovation and Intelligence for Informatics, Computing, and Technologies (3ICT) 2020 </li>
   </ul>
 </div>
       
