Teaching page added.

--- a/services.html
+++ b/services.html
@@ -25,6 +25,7 @@
         <li><a href="research.html">Research</a></li>
         <li><a href="publications.html">Publications</a></li>
         <li><a href="services.html">Services</a></li>
+        <li><a href="blog.html">Blog</a></li>
       </ul>
     </nav>
   </header>
@@ -152,7 +153,7 @@
 </div>
         
     </section>
- <hr>     
+ <br> <hr>    
 <!-- ********************** END OF THE PAGE ************************* -->    
   
 <!-- Footer Section -->
