--- a/research.html
+++ b/research.html
@@ -23,6 +23,7 @@
         <li><a href="research.html">Research</a></li>
         <li><a href="publications.html">Publications</a></li>
         <li><a href="services.html">Services</a></li>
+        <li><a href="blog.html">Blog</a></li>
       </ul>
     </nav>
   </header>
@@ -188,7 +189,7 @@
     </div></div>
   
 </section> 
-<hr>
+<br> <hr> 
 <!-- ********************** END OF THE PAGE ************************* -->    
 
 
