--- a/services.html
+++ b/services.html
@@ -172,7 +172,7 @@
                 <li><a href="https://www.linkedin.com/in/muasifk/" target="_blank"><i class="fab fa-linkedin"></i></a></li>
                 <li><a href="https://github.com/muasifk/" target="_blank"><i class="fab fa-github"></i></a></li>
                 <li><a href="https://www.researchgate.net/profile/Muhammad-Asif-Khan-3" target="_blank"><i class="fab fa-researchgate"></i></a></li>
-                <li><a href="https://scholar.google.com/citations?user=BgUrPm8AAAAJ&hl=en" target="_blank"><i class="fab fa-google"></i></a></li>
+                <li><a href="https://scholar.google.com/citations?user=BgUrPm8AAAAJ&hl=en" target="_blank"><i class="fab fa-google-scholar"></i></a></li>
                 <li><a href="https://www.youtube.com/channel/UCKEgO00pq57nSSSMmRZJiQg" target="_blank"><i class="fab fa-youtube"></i></a></li>
                 <li><a href="https://orcid.org/0000-0003-2925-8841" target="_blank"><i class="fab fa-orcid"></i></a></li>
                 
