Photo gallery added.

--- a/teaching.html
+++ b/teaching.html
@@ -27,7 +27,15 @@
         <li><a href="research.html">Research</a></li>
         <li><a href="publications.html">Publications</a></li>
         <li><a href="services.html">Services</a></li>
-        <li><a href="blog.html">Blog</a></li>
+<!--        <li><a href="blog.html">Blog</a></li>-->
+          
+        <li> <a href="#">Blog</a> 
+    <ul class="submenu"> 
+      <li><a href="blog.html">Blog</a></li>
+      <li><a href="photos.html">Photo Gallery</a></li>
+    </ul> 
+  </li> 
+          
       </ul>
     </nav>
   </header>
