--- a/photos.html
+++ b/photos.html
@@ -54,7 +54,7 @@
       
 <!-- **************************   Invited Talks  ************************ -->       
 
-<h1> Events </h1>
+<h1> Events Photos </h1>
             
 
 <section class="photo-gallery">
