--- a/services.html
+++ b/services.html
@@ -69,6 +69,7 @@
       <li> Co-Chair of Technical Committee at IEEE International Conference on Future Technologies for Smart Society (ICFTSS 2024), Kuala Lumpur, Malaysia. </li>
       <li> Program Co-Chair at 4th International Conference on Computers and Automation (CompAuto 2024), Milan, Italy. </li>
       <li> Program Co-Chair at International Conference on Control, Robotics Engineering Technology (CRET 2024), Milan, Italy. </li>
+      <li> Tutorial Chair at IEEE Gaming, Entertainment, and Media Conference (GEM) 2023, Bridgetown, Barbados.</li>
       <li> Session Chair at Innovation and Technological Advances for Sustainable Development (ITAS 2023), Doha, Qatar. </li>
       <li> Program Co-Chair at 3rd International Conference on Computers and Automation (CompAuto 2023), Paris, France </li>
       <li> Workshop Co-Chair at “Sensing, Communication, and Localization in 6G” workshop at 6GIoTT 2022, Fuzhou, China </li>
