--- a/publications.html
+++ b/publications.html
@@ -140,6 +140,8 @@
       M. A. Khan, R. Hamila and M. O. Hasna, <a href="https://ieeexplore.ieee.org/abstract/document/8892459">"Optimal Group Formation in Dense Wi-Fi Direct Networks for Content Distribution</a>," in IEEE Access, vol. 7, pp. 161231-161245, 2019.
     </li>
       
+    <li> K. Shaaban, M. A. Khan, and R. Hamila, <a href="">Effect of Distance between Ramp and Upstream Signal on Ramp Meter Operation</a>", Journal of Traffic and Transportation Management, vol. 1, no. 2, pp. 43–49, 2020.</li>
+      
     <li>
       M. A. Khan, R. Hamila, M. S. Kiranyaz, and M. Gabbouj, <a href="https://ieeexplore.ieee.org/document/8712495">"A Novel UAV-Aided Network Architecture Using Wi-Fi Direct"</a>, in IEEE Access, vol. 7, pp. 67305-67318, 2019.
     </li>
