--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
       
     </ul>
 -->
-    <p id="cv">  Download <a href="img/cv.pdf"> CV </a> </p>
+    <p id="cv">  Download <a href="files/cv.pdf"> CV </a> </p>
   </div>
 </section>
 
