--- a/research.html
+++ b/research.html
@@ -65,7 +65,18 @@
         A snapshot of our crowd counting POC deployed in metro station using two PTZ cameras and a single NVIDIA's <span class="important"> Jetson Nano</span>, device, providing real-time counting.
     </div>
     </div>
-    <!-- ++++++++++++++++++++++++++++++++++++++++++++-->  
+    <!-- ++++++++++++++++++++++++++++++++++++++++++++--> 
+        
+    <div class="research-item">
+    <div class="research-image"> <img src="img/haris.gif" alt="Research Image"> </div>
+    <div class="research-content">
+    <h2 class="research-title"> Haris: Stereo-vision based Depth and Size estimation </h2>
+    <p class="research-description">
+        Haris - The autonomous robot uses stereo-vision based object detection to estimate depth and size dimensions of the object from YOLO bounding boxes to avoid obstacles. This overcomes the limitations of <span class="important">LiDAR</span> based sensing for non-reflective objects such as fire, smoke, etc and detect objects like sign boards.
+        This is the Master thesis work of <a href="https://www.linkedin.com/in/laythhamad/"> Layth Hamad </a>. Read the <a href="https://www.researchgate.net/publication/378350143_Object_Depth_and_Size_Estimation_using_Stereo-vision_and_Integration_with_SLAM">paper</a> in IEEE Sensors Letters..
+    </div>
+    </div>
+    <!-- ++++++++++++++++++++++++++++++++++++++++++++--> 
       
     <div class="research-item">
     <div class="research-image"> <img src="img/LCDnet.jpg" alt="Research Image"> </div>
