CODE img updated

--- a/research.html
+++ b/research.html
@@ -142,7 +142,7 @@
         
     
     <div class="research-item">
-    <div class="research-image"> <img src="img/edge_2.png" alt="Research Image"> </div>
+    <div class="research-image"> <img src="img/CODE2.gif" alt="Research Image"> </div>
     <div class="research-content">
     <h2 class="research-title"> CODE for IoT </h2>
     <p class="research-description">
