GLOBECOM TPC added

--- a/services.html
+++ b/services.html
@@ -129,8 +129,9 @@
 <div class="services">
   <ul>  
       <li> IEEE International Conference on Communications (ICC 2021-2024)</li>
+      <li> IEEE Global Communications Conference (GLOBECOM) 2024 </li>
       <li> IEEE Vehicular Technology Conference (VTC2023-Fall) </li>
-      <li> IEEE Consumer Communications and Networking Conference (CNCC 2021-2023) </li>
+      <li> IEEE Consumer Communications and Networking Conference (CNCC 2021-2025) </li>
       <li> International Conference on Consumer Electronics (ICCE Berlin 2023)</li>
       <li> Asia Conference on Computer Vision, Image Processing, and Pattern Recognition (CVIPPR’24)</li>
       <li> IEEE BigData 2020</li>
