AE IEEE TTS added..

--- a/services.html
+++ b/services.html
@@ -56,6 +56,7 @@
             
 <div class="services">
   <ul>  
+      <li> <b>Associate Editor</b>, IEEE Transactions on Technology and Society. </li>
       <li> <b>Associate Editor</b>, IEEE Future Directions Newsletter </li>
       <li> <b>Editorial board member</b>, Computer Systems Science and Engineering journal</li>
       <li> <b>Guest Editor</b>, Frontiers in Communications and Networks </li>
@@ -67,7 +68,7 @@
             
 <div class="services">
   <ul>  
-      <li> <b>Co-Chair of Technical Committee</b> at IEEE International Conference on Future Technologies for Smart Society (ICFTSS 2024), Kuala Lumpur, Malaysia. </li>
+      <li> <b>Co-Chair of Technical Committee</b> at IEEE International Conference on Future Technologies for Smart Society (ICFTSS 2024), Malaysia. </li>
       <li> <b>Program Co-Chair</b> at 4th International Conference on Computers and Automation (CompAuto 2024), Milan, Italy. </li>
       <li> <b>Program Co-Chair</b> at International Conference on Control, Robotics Engineering Technology (CRET 2024), Milan, Italy. </li>
       <li> <b>Tutorial Chair</b> at IEEE Gaming, Entertainment, and Media Conference (GEM) 2023, Bridgetown, Barbados.</li>
