AE IEEE TCE added..

--- a/services.html
+++ b/services.html
@@ -56,9 +56,10 @@
             
 <div class="services">
   <ul>  
-      <li> <b>Associate Editor</b>, IEEE Transactions on Technology and Society. </li>
+      <li> <b> Associate Editor</b>, IEEE Transactions on Consumer Technology (TCE) </li>
+      <li> <b>Associate Editor</b>, IEEE Transactions on Technology and Society (TTS). </li>
       <li> <b>Associate Editor</b>, IEEE Future Directions Newsletter </li>
-      <li> <b>Editorial board member</b>, Computer Systems Science and Engineering journal</li>
+      <li> <b>Editorial board member</b>, Computer Systems Science and Engineering (CSSE) journal</li>
       <li> <b>Guest Editor</b>, Frontiers in Communications and Networks </li>
   </ul>
 </div>
