--- a/services.html
+++ b/services.html
@@ -56,7 +56,7 @@
             
 <div class="services">
   <ul>  
-      <li> <b> Associate Editor</b>, IEEE Transactions on Consumer Technology (TCE) </li>
+      <li> <b> Associate Editor</b>, IEEE Transactions on Consumer Electronics (TCE) </li>
       <li> <b>Associate Editor</b>, IEEE Transactions on Technology and Society (TTS). </li>
       <li> <b>Associate Editor</b>, IEEE Future Directions Newsletter </li>
       <li> <b>Editorial board member</b>, Computer Systems Science and Engineering (CSSE) journal</li>
