--- a/blog.html
+++ b/blog.html
@@ -29,9 +29,9 @@
         <li><a href="services.html">Services</a></li>
 <!--        <li><a href="blog.html">Blog</a></li>-->
         
-         <li> <a href="#">Blog</a> 
+         <li> <a href="#" class="active">Blog</a> 
         <ul class="submenu"> 
-          <li><a href="blog.html">Blog</a></li>
+          <li><a href="blog.html" class="active">Blog</a></li>
           <li><a href="photos.html">Photo Gallery</a></li>
         </ul> 
         </li> 
