--- a/photos.html
+++ b/photos.html
@@ -29,10 +29,10 @@
         <li><a href="services.html">Services</a></li>
 <!--        <li><a href="blog.html">Blog</a></li>-->
 
-         <li> <a href="#">Blog</a> 
+         <li> <a href="#" class="active">Blog</a> 
         <ul class="submenu"> 
           <li><a href="blog.html">Blog</a></li>
-          <li><a href="photos.html">Photo Gallery</a></li>
+          <li><a href="photos.html" class="active">Photo Gallery</a></li>
         </ul> 
         </li> 
           
