--- a/services.html
+++ b/services.html
@@ -24,7 +24,7 @@
         <li><a href="teaching.html">Teaching</a></li>
         <li><a href="research.html">Research</a></li>
         <li><a href="publications.html">Publications</a></li>
-        <li><a href="services.html">Services</a></li>
+        <li><a href="services.html" class="active">Services</a></li>
 <!--        <li><a href="blog.html">Blog</a></li>-->
           
         <li> <a href="#">Blog</a> 
