--- a/publications.html
+++ b/publications.html
@@ -23,7 +23,7 @@
         <li><a href="index.html">About</a></li>
         <li><a href="teaching.html">Teaching</a></li>
         <li><a href="research.html">Research</a></li>
-        <li><a href="publications.html">Publications</a></li>
+        <li><a href="publications.html" class="active">Publications</a></li>
         <li><a href="services.html">Services</a></li>
 <!--        <li><a href="blog.html">Blog</a></li>-->
           
