--- a/research.html
+++ b/research.html
@@ -20,7 +20,7 @@
       <ul>
         <li><a href="index.html">About</a></li>
         <li><a href="teaching.html">Teaching</a></li>
-        <li><a href="research.html">Research</a></li>
+        <li><a href="research.html" class="active">Research</a></li>
         <li><a href="publications.html">Publications</a></li>
         <li><a href="services.html">Services</a></li>
 <!--        <li><a href="blog.html">Blog</a></li>-->
