--- a/teaching.html
+++ b/teaching.html
@@ -23,7 +23,7 @@
     <nav>
       <ul>
         <li><a href="index.html">About</a></li>
-        <li><a href="teaching.html">Teaching</a></li>
+        <li><a href="teaching.html" class="active">Teaching</a></li>
         <li><a href="research.html">Research</a></li>
         <li><a href="publications.html">Publications</a></li>
         <li><a href="services.html">Services</a></li>
