--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Merriweather:wght@400;400i&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/jpswalsh/academicons/css/academicons.min.css">
   <link rel="stylesheet" href="style-common.css">
   <link rel="stylesheet" href="style-index.css">  
 </head>
@@ -62,7 +63,8 @@
       
     </ul>
 -->
-    <p id="cv">  Download <a href="files/cv.pdf"> CV </a> </p>
+<!--    <p id="cv">  Download <a href="files/cv.pdf"> CV </a> </p>-->
+      <p id="cv" class="social-icons"> Download <a href="files/cv.pdf" target="_blank"> <i class="ai ai-cv-square ai-1x"></i></a> </p>
   </div>
 </section>
 
@@ -202,6 +204,7 @@
         <li><a href="https://scholar.google.com/citations?user=BgUrPm8AAAAJ&hl=en" target="_blank"><i class="fab fa-google-scholar"></i></a></li>
         <li><a href="https://www.youtube.com/channel/UCKEgO00pq57nSSSMmRZJiQg" target="_blank"><i class="fab fa-youtube"></i></a></li>
         <li><a href="https://orcid.org/0000-0003-2925-8841" target="_blank"><i class="fab fa-orcid"></i></a></li>
+        <li><a href="https://www.webofscience.com/wos/author/record/G-2629-2013" target="_blank"> <i class="ai ai-clarivate ai-1x"></i></a></li>
     </ul>
 </div>
 
