DEI task force update

--- a/services.html
+++ b/services.html
@@ -159,7 +159,8 @@
 <!-- **************************  Other  ************************ -->       
 <h1> Technical Committees </h1>
 <div class="services">
-  <ul>  
+  <ul>
+      <li> IEEE DEI - Computational Intelligence Society's Task Force on "Deep Edge Intelligence" </li>
       <li> IEEE TCCC - CompSoc’s Technical Community on Computer Communications </li>
       <li> IEEE TCPAMI - CompSoc’s Technical Community on Pattern Analysis and Machine Intelligence </li>
       <li> IEEE MDA-TC - CTSoc’s Technical Committee on ML, DL and AI in CE </li>
