--- a/publications.html
+++ b/publications.html
@@ -88,7 +88,7 @@
     </li>
       
     <li>
-    M. Almehdhar, A. Albaseer, M. A. Khan, M. Abdallah, H. Menouar, S. Al-Kuwari, and A. Al-Fuqaha, <a href="https://ieeexplore.ieee.org/abstract/document/10582439/">Deep Learning in the Fast Lane: A Survey on Advanced Intrusion Detection Systems for Intelligent Vehicle Networks</a>, IEEE Open Journal of Vehicular Technology, 2024. [Accepted].  
+    M. Almehdhar, A. Albaseer, M. A. Khan, M. Abdallah, H. Menouar, S. Al-Kuwari, and A. Al-Fuqaha, <a href="https://ieeexplore.ieee.org/abstract/document/10582439/">Deep Learning in the Fast Lane: A Survey on Advanced Intrusion Detection Systems for Intelligent Vehicle Networks</a>, in IEEE Open Journal of Vehicular Technology, vol. 5, pp. 869-906, 2024.  
     </li>
       
     <li> 
