--- a/services.html
+++ b/services.html
@@ -39,11 +39,11 @@
         <section id="services" class="services">
             <h2>Journal Editorial Committee</h2>
             <ul>
-              <li> Associate Editor, IEEE Transactions on Consumer Electronics <b> (July 2024 - June 2026)</b> </li>
-              <li> Associate Editor, IEEE Transactions on Technology and Society <b>(May 2024 - May 2026) </b></li>
-              <li> Associate Editor, IEEE Future Directions Newsletter <b>(Apr 2021 - Present)</b> </li>
-              <li> Editorial board member, Computer Systems Science and Engineering (CSSE) journal <b> (Feb 2024 - Feb 2026) </b> </li>
-              <li> Editorial Board member, Frontiers in Communications and Networks <b>(Feb 2021 - Present)</b> </li>
+              <li> Associate Editor, IEEE Transactions on Consumer Electronics (July 2024 - June 2026) </li>
+              <li> Associate Editor, IEEE Transactions on Technology and Society(May 2024 - May 2026)</li>
+              <li> Associate Editor, IEEE Future Directions Newsletter (Apr 2021 - Present) </li>
+              <li> Editorial board member, Computer Systems Science and Engineering (CSSE) journal (Feb 2024 - Feb 2026) </li>
+              <li> Editorial Board member, Frontiers in Communications and Networks (Feb 2021 - Present) </li>
             </ul>
         </section>
         </div>
@@ -53,15 +53,15 @@
             <section id="services" class="services">
             <h2> Conference Chair/Co-chair </h2>
             <ul>
-                <li> <b>Co-Chair of Technical Committee</b> at IEEE International Conference on Future Technologies for Smart Society (ICFTSS 2024), Malaysia. </li>
-                <li> <b>Program Co-Chair</b> at 4th International Conference on Computers and Automation (CompAuto 2024), Milan, Italy. </li>
-                <li> <b>Program Co-Chair</b> at International Conference on Control, Robotics Engineering Technology (CRET 2024), Milan, Italy. </li>
-                <li> <b>Tutorial Chair</b> at IEEE Gaming, Entertainment, and Media Conference (GEM) 2023, Bridgetown, Barbados.</li>
-                <li> <b>Session Chair</b> at Innovation and Technological Advances for Sustainable Development (ITAS 2023), Doha, Qatar. </li>
-                <li> <b>Program Co-Chair</b> at 3rd International Conference on Computers and Automation (CompAuto 2023), Paris, France </li>
-                <li> <b>Workshop Co-Chair</b> at “Sensing, Communication, and Localization in 6G” workshop at 6GIoTT 2022, Fuzhou, China </li>
-                <li> <b>Session Chair</b> at “IEEE 41st International Conference on Consumer Electronics (ICCE), 2023 | Las Vegas, NV, USA </li>
-                <li> <b>Session Chair</b> at “2nd International Conference on Computers and Automation (CompAuto 2022), Paris, France </li>
+                <li> Co-Chair of Technical Committee at IEEE International Conference on Future Technologies for Smart Society (ICFTSS 2024), Malaysia. </li>
+                <li> Program Co-Chair at 4th International Conference on Computers and Automation (CompAuto 2024), Milan, Italy. </li>
+                <li> Program Co-Chair at International Conference on Control, Robotics Engineering Technology (CRET 2024), Milan, Italy. </li>
+                <li> Tutorial Chai at IEEE Gaming, Entertainment, and Media Conference (GEM) 2023, Bridgetown, Barbados.</li>
+                <li> Session Chair at Innovation and Technological Advances for Sustainable Development (ITAS 2023), Doha, Qatar. </li>
+                <li> Program Co-Chair at 3rd International Conference on Computers and Automation (CompAuto 2023), Paris, France </li>
+                <li> Workshop Co-Chair at “Sensing, Communication, and Localization in 6G” workshop at 6GIoTT 2022, Fuzhou, China </li>
+                <li> Session Chair at “IEEE 41st International Conference on Consumer Electronics (ICCE), 2023 | Las Vegas, NV, USA </li>
+                <li> Session Chair at “2nd International Conference on Computers and Automation (CompAuto 2022), Paris, France </li>
             </ul>
         </section>
         </div>
@@ -146,11 +146,10 @@
             <section id="services" class="services">
             <h2>Technical Committees</h2>
             <ul>
-                <li> <b>Co-Chair of Technical Committee</b> at IEEE International Conference on Future Technologies for Smart Society (ICFTSS 2024), Malaysia. </li>
-                  <li> IEEE DEI - Computational Intelligence Society's Task Force on "Deep Edge Intelligence" </li>
-                  <li> IEEE TCCC - CompSoc’s Technical Community on Computer Communications </li>
-                  <li> IEEE TCPAMI - CompSoc’s Technical Community on Pattern Analysis and Machine Intelligence </li>
-                  <li> IEEE MDA-TC - CTSoc’s Technical Committee on ML, DL and AI in CE </li>
+                  <li> <b>IEEE DEI</b> - Computational Intelligence Society's Task Force on "Deep Edge Intelligence" </li>
+                  <li> <b>IEEE TCCC</b> - CompSoc’s Technical Community on Computer Communications </li>
+                  <li> <b>IEEE TCPAMI</b> - CompSoc’s Technical Community on Pattern Analysis and Machine Intelligence </li>
+                  <li> <b>IEEE MDA-TC</b> - CTSoc’s Technical Committee on ML, DL and AI in CE </li>
                   <li> Internet of Things Community </li>
                   <li> IEEE Sensors Council </li>
             </ul>
@@ -162,10 +161,10 @@
             <section id="services" class="services">
             <h2>Others</h2>
             <ul>
-                  <li> <b>Community Mentor</b> at Coursera (Deeplearning.ai) </li>
-                  <li> <b>Research Mentor</b> at Qatar University Young Scientists Center (QUYSC) </li>
-                  <li> <b>External Examiner</b> for the senior design project, Qatar University </li>
-                  <li> <b>Judge</b> at IET Presentin10 competition </li>
+                  <li> Community Mentor at Coursera (Deeplearning.ai) </li>
+                  <li> Research Mentor at Qatar University Young Scientists Center (QUYSC) </li>
+                  <li> External Examiner for the senior design project, Qatar University </li>
+                  <li> Judge at IET Presentin10 competition </li>
             </ul>
         </section>
         </div>
