--- a/teaching.html
+++ b/teaching.html
@@ -113,7 +113,7 @@
     </main>
 
     <footer>
-        <p>&copy; 2024 Your Name. All rights reserved.</p>
+        <p>&copy; 2024 Muhammad Asif Khan. All rights reserved.</p>
     </footer>
     
     <script>
