--- a/publications.html
+++ b/publications.html
@@ -269,7 +269,7 @@
 </main>
 
     <footer>
-        <p>&copy; 2024 Your Name. All rights reserved.</p>
+        <p>&copy; 2024 Muhammad Asif Khan. All rights reserved.</p>
     </footer>
     
     <script>
