--- a/research.html
+++ b/research.html
@@ -115,7 +115,7 @@
     </main>
 
     <footer>
-        <p>&copy; 2024 Your Name. All rights reserved.</p>
+        <p>&copy; 2024 Muhammad Asif Khan. All rights reserved.</p>
     </footer>
     
     <script>
