--- a/teaching.html
+++ b/teaching.html
@@ -6,13 +6,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>M. A. Khan | Computer Scientist</title>
+    <title>M. A. Khan &#8211 Computer Scientist</title>
     <link rel="stylesheet" href="styles.css">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Lato:wght@400;700&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@400;700&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro:wght@400;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/jpswalsh/academicons/css/academicons.min.css">
 </head>
@@ -41,7 +42,7 @@
     <main>
             <div class="container">
             <section id="services" class="services">
-            <h2>Courses taught</h2>
+            <h2>Courses Taught</h2>
             <ul>
               <li> STAT-819 Advance Machine Learning (3 Cr. Hrs) - <a href="https://awkum.edu.pk/" target="_blank"> Abdul Wali Khan University, Mardan, Pakistan </a> </li>    
               <li> STAT-836 Advanced Techniques and Logical Reasoning (3 Cr. Hrs) - <a href="https://awkum.edu.pk/"> Abdul Wali Khan University, Mardan, Pakistan</a></li>    
