--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         <div class="container">
         <section id="bio" class="bio">
         <div class="bio-header">
-        <img src="img/khan2.PNG" alt="Muhammad Asif Khan" class="profile-img">
+        <img src="img/khan2.PNG" alt="MAK" class="profile-img">
         <div class="bio-info">
             <h1>Muhammad Asif Khan</h1>
             <h2>Research Scientist</h2>
@@ -128,9 +128,11 @@
         <div class="news-container">
         <section id="news" class="news">
             <h2>News</h2>
-            <p> [Jun 2024] Joined as Associate Editor of IEEE Transactions on Consumer Electronics (TCE).</p>
-            <p> [Jun 2024] Joined as Associate Editor of IEEE Transactions on Technology and Society. </p>
-            <p> [Jan 2024] Invited as Speaker at IEEE ICNGN 2024, Bangkok, Thailand. </p>
+<!--            <p> [Jun 2024] Joined as Associate Editor of IEEE Transactions on Consumer Electronics (TCE).</p>-->
+            <p><span class="news-date">[Jun 2024]</span> Joined as Associate Editor of IEEE Transactions on Consumer Electronics (TCE).</p>
+            <p><span class="news-date">[Jun 2024]</span> Joined as Associate Editor of IEEE Transactions on Technology and Society.</p>
+            <p><span class="news-date">[Jan 2024]</span> Invited as Speaker at IEEE ICNGN 2024, Bangkok, Thailand.</p>
+            
 <!--            <p>Share insights about your findings and what you’re currently focused on in your research.</p>-->
         </section>
         </div>
