Scheme markup, and google analytics added.

--- a/index.html
+++ b/index.html
@@ -4,6 +4,52 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Muhammad Asif Khan is a Computer Scientist in AI, focusing on wireless networks, mobile computing, computer vision, distributed machine learning, and autonomous vehicles.">
+    <!-- Structured Data for Person Schema -->
+    <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "Person",
+      "name": "Muhammad Asif Khan",
+      "url": "https://muasifk.github.io/",
+      "image": [
+      "https://muasifk.github.io/img/khan.png", 
+      "https://muasifk.github.io/img/khan2.jpg", 
+      "https://muasifk.github.io/img/khan2.jpg",
+      "https://muasifk.github.io/img/drone_det.jpg", 
+      "https://muasifk.github.io/img/handover.jpg", 
+      "https://muasifk.github.io/photos/BigComp_2023.jpg",
+      "https://muasifk.github.io/photos/CCNC_2023b.jpg", 
+      "https://muasifk.github.io/photos/CompAuto_2022.jpg", 
+      "https://muasifk.github.io/photos/ISNCC_2023.jpg", 
+      ]
+      "jobTitle": "Computer Scientist",
+      "affiliation": [
+      { "@type": "EducationalOrganization", "name": "Qatar University" },
+      { "@type": "Organization", "name": "Qatar Mobility Innovations Center (QMIC)" },
+      ],
+      "alumniOf": [
+      { "@type": "EducationalOrganization", "name": "Qatar University"},
+      { "@type": "EducationalOrganization", "name": "University of Engineering and Technology Taxila"},
+      { "@type": "EducationalOrganization", "name": "University of Engineering and Technology Peshawar"},
+      { "@type": "EducationalOrganization", "name": "University of Engineering and Technology Peshawar (Mardan Campus)"},
+      { "@type": "EducationalOrganization", "name": "Government Post Grdauate College Mardan"},
+      { "@type": "EducationalOrganization", "name": "Government High School No. 2 Bank Road Mardan"},
+      ],
+      "sameAs": [
+        "https://www.linkedin.com/in/muasifk/",
+        "https://scholar.google.com/citations?user=BgUrPm8AAAAJ&hl=en",
+        "https://twitter.com/muasifk",
+        "https://github.com/muasifk/",
+        "https://orcid.org/0000-0003-2925-8841",
+        "https://www.researchgate.net/profile/Muhammad-Asif-Khan-3",
+      ],
+      "description": "Muhammad Asif Khan (SMIEEE) is a Computer Scientist. He received a Ph.D. degree in electrical engineering from Qatar University (2020), an M.Sc. degree in telecommunication engineering from the University of Engineering and Technology Taxila, Pakistan (2013), and a B.Sc. degree in telecommunication engineering from the University of Engineering and Technology Peshawar, Pakistan (2009). He was awarded the Postdoctoral Research Award (PDRA) from the Qatar National Research Fund (QNRF), for his research work as a Postdoctoral Research Fellow at Qatar University, Doha, Qatar. Dr. Khan is a senior member of IEEE, a member of IET and a Chartered Engineer (CEng) with the Engineering Council (UK). He served as an associate editor of IEEE Transactions on Consumer Electronics (TCE), IEEE Transactions on Technology and Society (TTS), and IEEE Future Directions Technology Policy and Ethics Newsletter. He serves on several IEEE committees including the TCCC, TCPAMI, MDA-TC, MMTC, IOT, and Sensors Council. He also served as a TPC member of numerous IEEE conferences including ICC, Globecom, CCNC, VTC, ICCE, BigData, Sensors, GEM, etc."
+    }
+    </script>
+    
+    <meta name="google-site-verification" content="W57u9rFdHKBWLoG09oHsWW70MqqzIYgtYMP98YH90ys" />
+    
     <title>M. A. Khan &#8211 Computer Scientist</title>
     <link rel="stylesheet" href="styles.css">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
@@ -43,7 +89,7 @@
         <div class="container">
         <section id="bio" class="bio">
         <div class="bio-header">
-        <img src="img/khan2.PNG" alt="MAK" class="profile-img">
+        <img src="img/khan.PNG" alt="MAK" class="profile-img">
         <div class="bio-info">
             <h1>Muhammad Asif Khan</h1>
             <h2>Research Scientist</h2>
